# bountiful

./: Cargo.toml  README.md
assets/texture/: bountiful.tmx  bountiful2.tmx  hotbar.pyxel  hotbar.ron  items.pyxel  items.ron  logo.pyxel  obj_stoneblock001.ron  pathetic.pyxel  pathetic.ron  pathetic.tsx  player.ron  pointer.pyxel  pointer.ron
assets/ui/: welcome.ron
benches/: shortest_path.rs
config/: bindings.ron  display.ron
src/: bountiful.rs  lib.rs  main.rs  setup_bundle.rs  welcome.rs
src/components/: bound.rs  hotbar.rs  hotbar_gui.rs  loose.rs  make_move.rs  mod.rs  player.rs  pointer.rs  position.rs  proposed_move.rs  solid.rs  sprite_animation.rs
src/resources/: hotbar.rs  items.rs  map.rs  mod.rs
src/systems/: collision.rs  debug.rs  input.rs  make_move.rs  mod.rs  simple_animations.rs
