[package]
name = "model1"
version = "0.1.0"
authors = ["Thomas E. Enebo <tom.enebo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21.1"
pathfinding = "2.0.4"
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "shortest_path"
harness = false