[package]
name = "bountiful"
version = "0.1.0"
authors = ["Thomas E. Enebo <tom.enebo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15.0"
amethyst-imgui = "0.7.0"
amethyst_window = "0.5.0"
nalgebra = "0.19.0"
pathfinding = "2.0.4"
rand = "0.7.3"
tiled = "0.9.2"
winit = "0.19.2"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "shortest_path"
harness = false

[features]
default = ["vulkan", "tiles"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
tiles = ["amethyst/tiles"]
profiler = [ "amethyst/profiler" ]